--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="http://www.twitch.tv/wildriftelo">Envie !tutorial no chat</a>
+    <a href="https://www.twitch.tv/popout/wildriftelo/chat?popout=">Envie !tutorial no chat</a>
 </body>
 
 </html>
